--- a/src/coinmachine/UICoinNum.form
+++ b/src/coinmachine/UICoinNum.form
@@ -21,6 +21,7 @@
           <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <foreground color="-15216385"/>
           <text value="Accepting Coins"/>
         </properties>
       </component>
