--- a/src/coinmachine/UIBalanceNum.form
+++ b/src/coinmachine/UIBalanceNum.form
@@ -25,12 +25,12 @@
               <verticalAlignment value="1"/>
             </properties>
           </component>
-          <component id="572f8" class="javax.swing.JLabel">
+          <component id="572f8" class="javax.swing.JLabel" binding="balanceLabel">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Label"/>
+              <text value="0"/>
               <verticalAlignment value="1"/>
             </properties>
           </component>
@@ -43,7 +43,7 @@
               <verticalAlignment value="1"/>
             </properties>
           </component>
-          <component id="68a21" class="javax.swing.JProgressBar" binding="progressBar1" default-binding="true">
+          <component id="68a21" class="javax.swing.JProgressBar" binding="statusBar">
             <constraints>
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -51,39 +51,39 @@
           </component>
         </children>
       </grid>
-      <component id="89069" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <icon value="images/1baht.png"/>
-          <text value=""/>
-        </properties>
-      </component>
-      <component id="8bcba" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <icon value="images/10baht.png"/>
-          <text value=""/>
-        </properties>
-      </component>
-      <component id="b9b2d" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <icon value="images/5baht.png"/>
-          <text value=""/>
-        </properties>
-      </component>
       <component id="5a36b" class="javax.swing.JLabel">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="Insert Money"/>
+        </properties>
+      </component>
+      <component id="ec2f6" class="javax.swing.JButton" binding="oneBahtButton">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <icon value="images/1baht.png"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="ff116" class="javax.swing.JButton" binding="fiveBahtButton">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <icon value="images/5baht.png"/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="1eff5" class="javax.swing.JButton" binding="tenBahtButton">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <icon value="images/10baht.png"/>
+          <text value=""/>
         </properties>
       </component>
     </children>
