--- a/src/coinmachine/UIBalanceNum.form
+++ b/src/coinmachine/UIBalanceNum.form
@@ -47,7 +47,10 @@
             <constraints>
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <string value="0"/>
+              <stringPainted value="true"/>
+            </properties>
           </component>
         </children>
       </grid>
